--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/ed98e4680a.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Alkalami&family=Inter:wght@100;300;400;500;600;800&family=Montserrat:wght@100&family=Mulish:wght@200&family=Poppins:wght@300;700&family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400&display=swap" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
